<resources>
    <string name="app_name">Stupa</string>
    <string name="stu_Pa">Stupa Sports Analytics</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="signup">Register Here\n</string>
    <string name="register">Stupa Sports Analytics \n Register Page  \n</string>
    <string name="re_gister">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="all_user_data">All User Data</string>
</resources>